# Simple_UDP_Communication

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
UDPClient/: CMakeLists.txt  UDPClient.cpp  UDPClient.h  client_test.cpp
UDPServer/: CMakeLists.txt  UDPServer.cpp  UDPServer.h
